--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
-spring.jpa.show-sql=false
-spring.datasource.username=
-spring.datasource.password=
+spring.jpa.show-sql=
+spring.datasource.username=push-user
+spring.datasource.password=push-password
 
 telegram.token=
 telegram.hook.secret=
