Add drop-pending-updates property (changes)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ telegram.api=https://api.telegram.org/bot
 telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook.secret=lorem_ipsum
-telegram.hook=https://d626-79-142-196-226.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
-telegram.drop_pending_updates=true
+telegram.hook=https://e2fd-79-142-196-226.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.drop-pending-updates=true
 
 spring.profiles.active=local
