Add config for docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
+spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=push-user
 spring.datasource.password=push-password
@@ -34,4 +34,4 @@ telegram.hook.secret=lorem_ipsum
 telegram.hook=https://4ac8-79-142-197-201.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
-spring.profiles.active=local
+#spring.profiles.active=local
