Add dependency and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.open-in-view=false
 
+spring.profiles.active=local
+
 #Migration
 spring.liquibase.enabled=true
 spring.liquibase.driver-class-name=org.postgresql.Driver
@@ -34,4 +36,8 @@ telegram.hook.secret=lorem_ipsum
 telegram.hook=https://35ac-79-142-196-240.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
-spring.profiles.active=local
+#Redis
+spring.redis.host=redis
+spring.redis.port=6379
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.time-to-live=600000
