--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,11 @@ telegram.api=https://api.telegram.org/bot
 telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook.secret=lorem_ipsum
-telegram.hook=https://35ac-79-142-196-240.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://45b9-79-142-197-212.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
 #Redis
-spring.redis.host=redis
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.cache.redis.cache-null-values=false
-spring.cache.redis.time-to-live=600000
+#spring.cache.redis.cache-null-values=false
+#spring.cache.redis.time-to-live=600000
