--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ telegram.api=https://api.telegram.org/bot
 telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook.secret=lorem_ipsum
-telegram.hook=https://45b9-79-142-197-212.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://5e07-79-142-197-212.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
 #Redis
