Handle cache exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,9 +33,11 @@ telegram.api=https://api.telegram.org/bot
 telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook.secret=lorem_ipsum
-telegram.hook=https://4a20-79-142-197-204.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://e837-79-142-196-145.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
 #Redis
 spring.redis.host=localhost
 spring.redis.port=6379
+#spring.redis.retry.enabled=false
+#spring.cache.redis.time-to-live
