Add redis properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,9 @@ telegram.hook=https://e837-79-142-196-145.eu.ngrok.io/v1/api/telegram/${telegram
 telegram.drop-pending-updates=true
 
 #Redis
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.port=6379
+spring.redis.username=push-user
+spring.redis.password=push-password
 #spring.redis.retry.enabled=false
 #spring.cache.redis.time-to-live
