Update properties to run in container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
+spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=push-user
 spring.datasource.password=push-password
@@ -37,7 +37,7 @@ telegram.hook=https://cee1-79-142-196-145.eu.ngrok.io/v1/api/telegram/${telegram
 telegram.drop-pending-updates=true
 
 #Redis
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.port=6379
 spring.redis.password=mypassword
 #spring.redis.retry.enabled=false
