--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,9 @@ services:
   push-service:
     container_name: push-service
     build: .
+    depends_on:
+      - postgres
+      - redis
     networks:
       - postgres
       - metrics
@@ -53,6 +56,8 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
+    depends_on:
+      - push-service
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -67,6 +72,8 @@ services:
   grafana:
     image: grafana/grafana
     container_name: grafana
+    depends_on:
+      - prometheus
     volumes:
       - grafana_storage:/var/lib/grafana
     networks:
