--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,14 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
+# To run app from IDE, and postgres and redis containers
+spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
 spring.jpa.show-sql=false
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=push-user
+spring.datasource.password=push-password
 
-telegram.token=
-telegram.hook.secret=
-telegram.hook=https://push.all-easy.ru/v1/api/telegram/${telegram.hook.secret}/
+#telegram.token=
+#telegram.hook.secret=
+#telegram.hook=https://push.all-easy.ru/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=false
 
-spring.redis.host=redis
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=push-password
+spring.redis.password=mypassword
