--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.open-in-view=false
 
-spring.profiles.active=local
+spring.profiles.active=test
 
 #Migration
 spring.liquibase.enabled=true
