Update properties for test and local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
+# Config for local testing (with IDE)
+spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=push-user
 spring.datasource.password=push-password
@@ -33,7 +34,7 @@ telegram.api=https://api.telegram.org/bot
 telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook.secret=lorem_ipsum
-telegram.hook=https://cee1-79-142-196-145.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://98b4-79-142-196-155.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
 #Redis
