--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
-# To run app from IDE, and postgres and redis containers
-spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
+# Config to test on server (prod)
+spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
 spring.jpa.show-sql=false
 spring.datasource.username=push-user
 spring.datasource.password=push-password
@@ -9,6 +9,6 @@ spring.datasource.password=push-password
 #telegram.hook=https://push.all-easy.ru/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=false
 
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.port=6379
 spring.redis.password=mypassword
