--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=push-user
-spring.datasource.password=push-password
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -27,11 +27,9 @@ management.server.port=8085
 api.key=
 
 #TELEGRAM
+telegram.token=
+telegram.hook.secret=
 telegram.api=https://api.telegram.org/bot
-telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.url=${telegram.api}${telegram.token}
-telegram.hook.secret=lorem_ipsum
 telegram.hook=https://35ac-79-142-196-240.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
-
-spring.profiles.active=local
