--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
+# Development config to run locally with IDE
+spring.profiles.active=${PROFILE}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -27,9 +29,14 @@ management.server.port=8085
 api.key=
 
 #TELEGRAM
-telegram.token=
-telegram.hook.secret=
+telegram.token=${TG_TOKEN}
+telegram.hook.secret=${TG_HOOK_SECRET}
 telegram.api=https://api.telegram.org/bot
 telegram.url=${telegram.api}${telegram.token}
-telegram.hook=https://35ac-79-142-196-240.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://1b75-79-142-196-155.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
+
+# Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=${REDIS_PASSWORD}
