Update hook url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ telegram.token=${TG_TOKEN}
 telegram.hook.secret=${TG_HOOK_SECRET}
 telegram.api=https://api.telegram.org/bot
 telegram.url=${telegram.api}${telegram.token}
-telegram.hook=https://1b75-79-142-196-155.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://3271-79-142-196-136.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
 
 # Redis
