--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+spring.profiles.active=local
 spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=push-user
+spring.datasource.password=push-password
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -27,9 +28,9 @@ management.server.port=8085
 api.key=
 
 #TELEGRAM
-telegram.token=
-telegram.hook.secret=
+telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
+telegram.hook.secret=4bce04e2-8abc-480d-865c-56d52174e427
 telegram.api=https://api.telegram.org/bot
 telegram.url=${telegram.api}${telegram.token}
-telegram.hook=https://35ac-79-142-196-240.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://54c5-79-142-197-203.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
