--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.username=push-user
 spring.datasource.password=push-password
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
 spring.jpa.open-in-view=false
 
 #Migration
@@ -32,5 +33,5 @@ telegram.token=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
 telegram.hook.secret=4bce04e2-8abc-480d-865c-56d52174e427
 telegram.api=https://api.telegram.org/bot
 telegram.url=${telegram.api}${telegram.token}
-telegram.hook=https://54c5-79-142-197-203.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=https://c6f4-79-142-196-233.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
