--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PROFILE=local
 DB_NAME=push-service
-DB_USERNAME=push-username
+DB_USERNAME=push-user
 DB_PASSWORD=push-password
 TG_HOOK_SECRET=4bce04e2-8abc-480d-865c-56d52174e427
 TG_TOKEN=5330572902:AAEVlVzdzp5AfYYuumjgoL_-mz1RKdogub4
