add info to message after push transaction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
+#Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=
 spring.datasource.password=
 
+#Jpa
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
 
 #Migration
 spring.liquibase.enabled=true
 spring.liquibase.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=changelog/main.xml
-
-spring.jpa.show-sql=false
 
 app.front.host=http://localhost:3000
 
@@ -29,7 +29,8 @@ api.key=
 #TELEGRAM
 telegram.token=
 telegram.hook.secret=
+telegram.hook.url=
 telegram.api=https://api.telegram.org/bot
 telegram.url=${telegram.api}${telegram.token}
-telegram.hook=https://35ac-79-142-196-240.eu.ngrok.io/v1/api/telegram/${telegram.hook.secret}/
+telegram.hook=${telegram.hook.url}/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
