--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=
+
 #Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -34,3 +36,8 @@ telegram.api=https://api.telegram.org/bot
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook=${telegram.hook.url}/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
+
+# Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
