--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.profiles.active=
+spring.profiles.active=${PROFILE}
 
 #Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/push-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 #Jpa
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -29,10 +29,10 @@ management.server.port=8085
 api.key=
 
 #TELEGRAM
-telegram.token=
-telegram.hook.secret=
-telegram.hook.url=
 telegram.api=https://api.telegram.org/bot
+telegram.hook.url=${TG_HOOK_URL}
+telegram.token=${TG_TOKEN}
+telegram.hook.secret=${TG_HOOK_SECRET}
 telegram.url=${telegram.api}${telegram.token}
 telegram.hook=${telegram.hook.url}/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=true
@@ -40,4 +40,4 @@ telegram.drop-pending-updates=true
 # Redis
 spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=
+spring.redis.password=${REDIS_PASSWORD}
