--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,3 +7,7 @@ telegram.token=
 telegram.hook.secret=
 telegram.hook=https://push.all-easy.ru/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=false
+
+spring.redis.host=redis
+spring.redis.port=6379
+spring.redis.password=push-password
