--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,12 @@ services:
     ports:
       - 8080:8080
     environment:
-      - spring_profiles_active=${PROFILE}
-      - spring_datasource_username=${DB_USERNAME}
-      - spring_datasource_password=${DB_PASSWORD}
-      - telegram_hook_secret=${TG_HOOK_SECRET}
-      - telegram_token=${TG_TOKEN}
+      - PROFILE=${PROFILE}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - TG_HOOK_SECRET=${TG_HOOK_SECRET}
+      - TG_TOKEN=${TG_TOKEN}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
       - api_key=${API_KEY}
     restart: unless-stopped
 
