--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,9 @@
 spring.datasource.url=jdbc:postgresql://postgres:5432/push-service
 spring.jpa.show-sql=false
-spring.datasource.username=
-spring.datasource.password=
 
-telegram.token=
-telegram.hook.secret=
 telegram.hook=https://push.all-easy.ru/v1/api/telegram/${telegram.hook.secret}/
 telegram.drop-pending-updates=false
 
 spring.redis.host=redis
 spring.redis.port=6379
-spring.redis.password=push-password
+spring.redis.password=${REDIS_PASSWORD}
