Remove all xml files, add yaml for liquibase (#17)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=false
 #Migration
 spring.liquibase.enabled=true
 spring.liquibase.driver-class-name=org.postgresql.Driver
-spring.liquibase.change-log=changelog/main.xml
+spring.liquibase.change-log=changelog/main.yaml
 
 app.front.host=http://localhost:3000
 
