--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'com.diffplug.spotless' version "6.19.0"
 }
 
 group = 'ru.all_easy'
@@ -65,4 +66,36 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+spotless {
+	format 'misc', {
+		// define the files to apply `misc` to
+		target '*.gradle', '*.md', '.gitignore'
+
+		// define the steps to apply to those files
+		trimTrailingWhitespace()
+		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
+		endWithNewline()
+	}
+	java {
+		// don't need to set target, it is inferred from java
+
+		// apply a specific flavor of google-java-format
+		// googleJavaFormat('1.8').aosp().reflowLongStrings()
+		googleJavaFormat()
+
+		// fix formatting of type annotations
+		// formatAnnotations()
+
+		// make sure every file has the following copyright header.
+		// optionally, Spotless can set copyright years by digging
+		// through git history (see "license" section below)
+		// licenseHeader '/* (C)$YEAR */'
+
+		// Use the default importOrder configuration
+		importOrder()
+
+		removeUnusedImports()
+	}
 }
