--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,16 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'com.bmuschko.docker-spring-boot-application' version '9.3.1'
 }
 
-group = 'ru.all_easy'
-version = '0.0.1-SNAPSHOT'
+group = 'dakotaio'
+version = '0.0.3'
 sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	gradlePluginPortal()
 }
 
 ext {
@@ -65,4 +67,10 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+docker {
+	springBootApplication {
+		baseImage = 'openjdk:17-jdk-slim'
+	}
 }
