--- a/build.gradle
+++ b/build.gradle
@@ -70,32 +70,18 @@ tasks.named('test') {
 
 spotless {
 	format 'misc', {
-		// define the files to apply `misc` to
 		target '*.gradle', '*.md', '.gitignore'
 
-		// define the steps to apply to those files
 		trimTrailingWhitespace()
-		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
+		indentWithTabs()
 		endWithNewline()
 	}
 	java {
-		// don't need to set target, it is inferred from java
-
-		// apply a specific flavor of google-java-format
-		// googleJavaFormat('1.8').aosp().reflowLongStrings()
-		googleJavaFormat()
-
-		// fix formatting of type annotations
-		// formatAnnotations()
-
-		// make sure every file has the following copyright header.
-		// optionally, Spotless can set copyright years by digging
-		// through git history (see "license" section below)
-		// licenseHeader '/* (C)$YEAR */'
-
-		// Use the default importOrder configuration
+		palantirJavaFormat()
 		importOrder()
-
 		removeUnusedImports()
+		trimTrailingWhitespace()
+		endWithNewline()
+		formatAnnotations()
 	}
 }
