--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,6 +16,7 @@ jobs:
         run: ./gradlew spotlessCheck
   build:
     runs-on: ubuntu-latest
+    needs: [checkstyle]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
