add actuator props bump version 0.0.9 -> 0.0.10

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,10 +37,20 @@ management:
       enabled: true
     health:
       show-details: always
+    shutdown:
+      enabled: true
+    info:
+      enabled: true
   endpoints:
+    enabled-by-default: false
+    jmx:
+      exposure:
+        include: "health,info"
     web:
       exposure:
-        include: prometheus
+        include: actuator,prometheus
+      discovery:
+        enabled: false
   metrics.tags.application: PushService
   server.port: 8085
 
