--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 	//TESTS
 	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.3.1'
+	testImplementation "org.testcontainers:testcontainers:1.18.3"
+	testImplementation "org.testcontainers:postgresql:1.18.3"
+	implementation group: 'redis.clients', name: 'jedis', version: '4.4.3'
+
 }
 
 dependencyManagement {
