--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,8 @@ spring:
     host: localhost
     port: 6379
     password: ${REDIS_PASSWORD}
+#    template:
+#      defaultSerializer: org.springframework.data.redis.serializer.GenericJackson2JsonRedisSerializer
 
 #Monitoring
 management:
