--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.8'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.springframework.boot' version '3.0.0'
+	id 'io.spring.dependency-management' version '1.1.2'
 	id 'com.diffplug.spotless' version "6.19.0"
 	id 'com.bmuschko.docker-spring-boot-application' version '9.3.1'
 }
@@ -20,48 +20,49 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'io.projectreactor:reactor-test'
+
+	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'org.postgresql:r2dbc-postgresql:1.0.2.RELEASE'
 
 	//LOGS
-	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-	implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.9'
-	testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
+//	implementation 'org.slf4j:slf4j-api:1.7.30'
+//	implementation 'ch.qos.logback:logback-core:1.2.9'
+//	testImplementation 'ch.qos.logback:logback-classic:1.2.9'
 
 	//JWT
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
-	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
-	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-orgjson', version: '0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-orgjson:0.11.2'
 
 	//MIGRATION
 	implementation 'org.liquibase:liquibase-core'
 
 	//JAVA CALCULATOR
-	implementation group: 'com.fathzer', name: 'javaluator', version: '3.0.3'
+	implementation 'com.fathzer:javaluator:3.0.3'
 
 	//MONITORING
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
 	//CLOUD
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'com.playtika.reactivefeign:feign-reactor-spring-cloud-starter:4.0.0'
 
 	//UTILS
-	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 
 	//TESTS
-	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.3.1'
+	testImplementation 'junit:junit:4.13.2'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 }
 
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		"org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
