refactor, start push command

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,18 +8,13 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
-  #Jpa
-#  jpa:
-#    properties:
-#      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-#    open-in-view: false
-#    show-sql: false
-
   #Migration
   liquibase:
-    enabled: true
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/${DB_NAME}
+    user: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     change-log: changelog/main.yaml
+    enabled: true
 
   #REDIS
   redis:
