--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'dakotaio'
-version = '0.0.11'
+version = '0.0.12'
 sourceCompatibility = '17'
 
 repositories {
@@ -57,6 +57,13 @@ dependencies {
 	//TESTS
 	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.3.1'
+
+	testImplementation "org.testcontainers:testcontainers:1.18.3"
+	testImplementation "org.testcontainers:postgresql:1.18.3"
+	testImplementation "org.testcontainers:junit-jupiter:1.18.3"
+
+	implementation group: 'redis.clients', name: 'jedis', version: '4.4.3'
+
 }
 
 dependencyManagement {
@@ -67,6 +74,12 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test {
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
 
 spotless {
